--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,4 +1,39 @@
-@font-face {
+
+
+/* NAVIGATION */
+nav {
+  width: 100%;
+  height: 40px;
+  background: #AAA;
+}
+.nav-ul {
+  list-style-type: none;
+  font-size: 30px;
+  float: right;
+  margin: 0;
+  padding: 0;
+}
+.nav-li {
+  display: inline;
+}
+
+/* FOOTER */
+footer {
+  width:270px;
+  float:left;
+  position:fixed;
+  bottom:50px;
+  -webkit-font-smoothing:subpixel-antialiased;
+}
+
+/*HTML*/
+
+html {
+  background: #aaa;
+  font-family: Parkavenue;
+}
+
+/*@font-face {
   font-family: 'Noto Sans';
   font-weight: 400;
   font-style: normal;
@@ -240,13 +275,7 @@ hr {
   margin:0 0 20px;
 }
 
-footer {
-  width:270px;
-  float:left;
-  position:fixed;
-  bottom:50px;
-  -webkit-font-smoothing:subpixel-antialiased;
-}
+
 
 @media print, screen and (max-width: 960px) {
 
@@ -321,4 +350,4 @@ footer {
     font-size:12pt;
     color:#444;
   }
-}
+}*/
