--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -7,7 +7,7 @@ layout: default
     <div class="col-lg-6 col-md-6 col-sm-6 gallery">
       {{content}}
     </div>
-    <div class="col-lg-6 col-md-6 col-sm-6 margin30">
+    <div class="col-lg-6 col-md-6 col-sm-6 marginTop30">
         <h4>{{page.title}}</h4>
         <h6>{{page.date}}</h6>
         <p>{{page.description}}</p>
