--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -8,7 +8,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-6">
                         <input id="name" type="text" placeholder="NAME" name="senderName">
                         <input id="email" type="text" placeholder="E-MAIL" name="senderEmail">
-                        <input id="subject" type="text" placeholder="SUBJECT" name="senderMessage">
+                        <input id="subject" type="text" placeholder="SUBJECT" name="senderSubject">
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6">
                         <textarea id="message" type="text" placeholder="MESSAGE" name="senderMessage"></textarea>
