changes to _includes
 * footer.html - waterloo order
 * contact.html - margin-bottom
 * navbar.html - link to resume

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
                         <p><b>CAITLYN KODRIC</b></p>
                     </div>
                     <div class="col-lg-4">
-                        <p>Kitchener, Ontario | University of Waterloo</p>
+                        <p>University of Waterloo | Waterloo, Ontario</p>
                     </div>
                     <div class="col-lg-4">
                         <p><a href="mailto:ckodric@gmail.com" class="linkFFF">ckodric@gmail.com</a> | <a href="mailto:cmykodri@edu.uwaterloo.ca" class="linkFFF">cmykodri@edu.uwaterloo.ca</a></p>
