--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,7 +15,7 @@
             <li><a href="index.html">About</a></li>
             <li><a href="experience.html">Experience</a></li>
             <li><a href="projects.html">Projects</a></li>
-            <li><a href="../assets/PDF/CaitlynKodric Resume.pdf" target="_blank">Resume</a></li>
+            <li><a href="../assets/PDF/CaitlynKodricResume.pdf" target="_blank">Resume</a></li>
             <li><a href="https://github.com/caitlynkodric" target="_blank"><i class="fa fa-github"></i></a></li>
             <li><a href="https://ca.linkedin.com/in/caitlynkodric" target="_blank"><i class="fa fa-linkedin"></i></a></li>
             <li><a href="https://devpost.com/caitlynkodric" target='_blank'><img src="../assets/img/devpost.png" alt="devost logo"/></a></li>
