--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,8 +57,11 @@ body {
     -webkit-font-smoothing: antialiased;
     -webkit-overflow-scrolling: touch;
 }
+h1 {
+	color: #4a4a4a
+}
 
-h1, h2, h3, h4, h5, h6 {
+h2, h3, h4, h5, h6 {
 	font-weight: 700;
     color: #4a4a4a;
 }
@@ -257,6 +260,10 @@ h1, h2, h3, h4, h5, h6 {
 	margin-bottom: 10px;
 }
 
+.marginBottom60 {
+	margin-bottom: 60px;
+}
+
 .linkFFF {
 	color: white;
 }
@@ -277,3 +284,9 @@ h1, h2, h3, h4, h5, h6 {
 	font-size: 11px; 
 	text-decoration: none;
 }
+
+/*@media (min-width: 979px) {
+	.navbar-brand {
+		margin-top: -48px;
+	}
+}*/
