adds css to justify paragraphs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -280,9 +280,12 @@ h2, h3, h4, h5, h6 {
 	margin: 0px auto;
 }
 
-.maijkLinks .majikLinks:hover{
-	font-size: 11px; 
-	text-decoration: none;
+.justify {
+	text-align: justify
+}
+
+.noDecoration {
+	list-style: none
 }
 
 /*@media (min-width: 979px) {
