--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -5,5 +5,7 @@ layout: default
   <div class="row centered mt mb">
 
       {{content}}
+      
+      <a href="{{ page.last }}.html" class="noLink">{{ page.last }} <i class="fa fa-arrow-left"></i></a>   <a href="projects.html"><i class="fa fa-th-large"></i></a>   <a href="{{ page.next }}.html"><i class="fa fa-arrow-right" class="noLink"></i> {{ page.next }}</a>
 
   </div>
