--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
             <div class="container">
                 <div class="row centered">
                     <div class="col-lg-4">
-                        <p><b>CAITLYN KODRIC</b></p>
+                        <p>© <b>CAITLYN KODRIC</b></p>
                     </div>
                     <div class="col-lg-4">
                         <p>University of Waterloo | Waterloo, Ontario</p>
