--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,16 +4,16 @@
 
             <header>Say Hello!</header>
 
-            <form id="form" name="sentMessage" class="topBefore" novalidate>
+            <form id="form" name="sentMessage" class="topBefore" action="contact.php" method="POST">
                     <div class="col-lg-6 col-md-6 col-sm-6">
-                        <input id="name" type="text" placeholder="NAME" name="senderName" required data-validation-required-message="Please enter your name.">
+                        <input id="name" type="text" placeholder="NAME" name="senderName">
                         
-                        <input id="email" type="email" placeholder="E-MAIL" name="senderEmail" required data-validation-required-message="Please enter your email address.">
+                        <input id="email" type="email" placeholder="E-MAIL" name="senderEmail">
                         
-                        <input id="subject" type="text" placeholder="SUBJECT" name="senderSubject" required data-validation-required-message="Please enter a subject.">
+                        <input id="subject" type="text" placeholder="SUBJECT" name="senderSubject">
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6">
-                        <textarea id="message" type="text" placeholder="MESSAGE" name="senderMessage" required data-validation-required-message="Please enter a message."></textarea>
+                        <textarea id="message" type="text" placeholder="MESSAGE" name="senderMessage"></textarea>
                         <input id="submit" type="submit" value="GO!">
                     </div>
                     
