--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,7 +4,7 @@
 
             <header>Say Hello!</header>
 
-            <form id="form" name="sentMessage" class="topBefore" action="contact.php" method="POST">
+            <form id="form" name="sentMessage" class="topBefore" action="../contact.php" method="POST">
                     <div class="col-lg-6 col-md-6 col-sm-6">
                         <input id="name" type="text" placeholder="NAME" name="senderName">
                         
