--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -6,6 +6,8 @@ layout: default
 
       {{content}}
       
-      <a href="{{ page.last }}.html" class="noLink">{{ page.last }} <i class="fa fa-arrow-left"></i></a>   <a href="projects.html"><i class="fa fa-th-large"></i></a>   <a href="{{ page.next }}.html"><i class="fa fa-arrow-right" class="noLink"></i> {{ page.next }}</a>
+      <a href="{{ page.last }}.html" class="noLink noTextDeco">{{ page.last }} <i class="fa fa-arrow-left"></i></a>   
+      <a href="projects.html"><i class="fa fa-th-large"></i></a>   <a href="{{ page.next }}.html">
+        <i class="fa fa-arrow-right" class="noLink noTextDeco"></i> {{ page.next }}</a>
 
   </div>
