--- a/Jekyll/_includes/header.html
+++ b/Jekyll/_includes/header.html
@@ -4,9 +4,9 @@
 
     <title>CMYK | Portfolio</title>
 
-    <meta name="description" content="Snow - Clean & Minimal Portfolio HTML template.">
+<!--    <meta name="description" content="Snow - Clean & Minimal Portfolio HTML template.">
     <meta name="keywords" content="portfolio, clean, minimal, blog, template, portfolio website">
-    <meta name="author" content="nK">
+    <meta name="author" content="nK">-->
 
     <!-- <link rel="icon" type="image/png" href="assets/images/favicon.png"> -->
 
