--- a/css/caitlynkodric.webflow.css
+++ b/css/caitlynkodric.webflow.css
@@ -79,7 +79,7 @@ a {
 }
 
 a:hover {
-  color: #32343a;
+  color: #fff;
 }
 
 a:active {
@@ -249,6 +249,10 @@ figcaption {
   line-height: 20px;
 }
 
+.paragraph-tiny:hover {
+  color: #1a1b1f;
+}
+
 .paragraph-tiny.cc-paragraph-tiny-light {
   opacity: 0.7;
 }
@@ -403,6 +407,7 @@ figcaption {
 
 .navigation-item:hover {
   opacity: 0.9;
+  color: #1a1b1f;
 }
 
 .navigation-item:active {
@@ -793,6 +798,7 @@ figcaption {
 
 .footer-item:hover {
   opacity: 0.9;
+  color: #1a1b1f;
 }
 
 .footer-item:active {
@@ -1321,6 +1327,14 @@ figcaption {
   text-decoration: none;
 }
 
+.back-to-top:hover {
+  color: #1a1b1f;
+}
+
+.body {
+  color: #1a1b1f;
+}
+
 .columns {
   display: -webkit-box;
   display: -webkit-flex;
@@ -1732,6 +1746,11 @@ figcaption {
 .project-row {
   border: 0px solid #000;
   background-color: #272832;
+  color: #fff;
+}
+
+.project-row:hover {
+  border-style: none;
 }
 
 .project-row.blue {
@@ -1745,7 +1764,7 @@ figcaption {
 .tag {
   font-family: Myriadpro, sans-serif;
   color: hsla(0, 0%, 100%, 0.49);
-  font-size: 9px;
+  font-size: 12px;
   line-height: 10px;
   font-weight: 400;
   letter-spacing: 1px;
@@ -1997,6 +2016,10 @@ figcaption {
 
 .downloadresumelink {
   text-decoration: none;
+}
+
+.downloadresumelink:hover {
+  color: #1a1b1f;
 }
 
 @media (max-width: 991px) {
@@ -2450,6 +2473,10 @@ figcaption {
     font-size: 16px;
     line-height: 24px;
   }
+  .paragraph-light {
+    font-size: 12px;
+    line-height: 18px;
+  }
   .navigation {
     padding-right: 20px;
     padding-left: 20px;
@@ -2543,13 +2570,36 @@ figcaption {
     font-size: 30px;
     line-height: 46px;
   }
+  .text-block-3 {
+    font-size: 16px;
+  }
+  .project-name {
+    font-size: 24px;
+    line-height: 28px;
+  }
   .project-bio {
     font-size: 36px;
     line-height: 48px;
   }
+  .project-subtitle {
+    font-size: 14px;
+    line-height: 18px;
+  }
+  .project-section-paragraph {
+    font-size: 14px;
+    line-height: 20px;
+  }
+  .grid-5 {
+    margin-right: auto;
+    margin-left: auto;
+  }
   .heading-8 {
-    font-size: 17px;
-    line-height: 24px;
+    font-size: 14px;
+    line-height: 20px;
+  }
+  .list-item {
+    font-size: 14px;
+    line-height: 20px;
   }
   .div-block-19 {
     text-align: center;
